@@ -1,3 +1,8 @@
+2008-08-04  Carlos Garnacho  <carlos@imendio.com>
+
+	* src/tracker-indexer/tracker-indexer.c (delete_item): Do not try to
+	delete items that don't exist in the database.
+
 2008-08-04  Ivan Frade  <ivan.frade@nokia.com>
 
 	* src/libtracker-common/tracker-dbus.c
